Fixed play view wrong padding

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,9 @@
 body {
   background-color: black;
-  padding: 5px;
   margin: 0 0;
 }
 .main-container {
-  height: 97vh;
+  height: 100vh;
   background-color: #bbd1d3;
   display: flex;
   flex-direction: column;
